Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-4497

Network activity icon doesn't update automatically

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      Official 43246.
      Open control panel, double click on "network connection", the network activity icon will appear on the notification area in the taskbar but it won't reflect any network activity unless you click at least once on it.

      Attachments

        1. network not activity.png
          49 kB
          manuel
        2. network_activity.webm
          756 kB
          karlexceed
        3. disconnected.png
          30 kB
          karlexceed
        4. disconnected_properties.png
          31 kB
          karlexceed
        5. animated_icon.webm
          635 kB
          karlexceed
        6. netshell.patch
          0.5 kB
          Katayama Hirofumi MZ
        7. patch.webm
          3.64 MB
          shytzedaka
        8. network_patched.webm
          766 kB
          karlexceed

        Issue Links

          Activity

            People

              KRosUser KRosUser
              gabrielilardi Gabriel ilardi
              Votes:
              4 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: