dll/shellext/netshell/resource.h
@@ -125,3 +125,4 @@
 #define IDS_WZD_DOMAIN_NAME          13457
 
 #define IDR_NETSHELL 20000
+
